--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,19 @@
     <version>1.0-SNAPSHOT</version>
 
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+    </dependencies>
+    <repositories>
+        <repository>
+            <id>projectlombok.org</id>
+            <url>http://projectlombok.org/mavenrepo</url>
+        </repository>
+    </repositories>
+
 </project>
