--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>5.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
